kubernetes/apps/wallabag/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wallabag
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:2.6.9
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: "100m"
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/www/wallabag/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wallabag-data-pvc
